2004-07-02  Brian Kahne  <bkahne@ibmoto.com>

	* Changed how we go about setting a priority.  We used to always
	yield, but this was wrong b/c if we change to a higher priority,
	that thread should execute, since the highest priority thread
	should always run before anything else.  Modified
	Cluster::set_priority so that if the new priority is higher, we
	simply record it and return, i.e. we don't swap.  If it's equal or
	lower, then we record it and yield.

	* Fixed bug with busy and higher-priority delayed threads.  I
	wasn't correctly calculating elapsed time and I wasn't correctly
	tracking what the busy thread was.  Added a busy-thread pointer to
	Proc to track who is currently the busy-ing thread.

2004-07-01  Brian Kahne  <bkahne@ibmoto.com>

	* EAV regression added.

	* Fixed bug with busy:  It was possible to get the same processor
	back, where the first item to execute is the same thread that
	we're currently in.  This can happen when there's a processor with
	just a single thread that goes busy.  Put in a check that if the
	new processor's next thread is our current thread, skip the call
	to exec_block.

	* Fixed problem with channels, when the user doesn't need the
	channel value.  We weren't calling get, so we never cleared out
	the channel value.

2004-06-28  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed implicit method calls within par blocks.  This means that
	functions have to be looked up and then we have to see if we're in
	a class.  The complication is that we need to get a Class object,
	but the user-plain metaclass (Plasma) interfered with this.  Added
	a static pointer to VarWalker that Plasma::InitializeInstance
	sets.  This should be okay b/c there should only be one instance
	of this class.

	Once we get the Class object, we see if the variable is a method
	of the class.  If it is, we store the 'this' pointer and translate
	the code to an explicit method call using that pointer.
