@@ -311,12 +311,13 @@ and <strong>afor</strong>.  Thus, it's possible to have a read-only channel.</p>
 <ol class="arabic">
 <li><p class="first"><tt class="literal"><span class="pre">Channel&lt;class</span> <span class="pre">Data&gt;</span></tt>:  This is a typed channel which reads and writes an
 object of type <em>Data</em>.  It contains only a single copy of this object; a
-second write will block if the first write's data has not been read.</p>
+second write will block if the first write's data has not been read.  It may
+be used with multiple producers, but only a single consumer is allowed.</p>
 </li>
-<li><p class="first"><tt class="literal"><span class="pre">QueueChan&lt;class</span> <span class="pre">Data&gt;</span></tt>:  This is a typed queued channel:  It allows for
-multiple producers but still requires a single consumer.  By default, the
-queue size is not fixed, but the user may set a maximum size by specifying it
-as the constructor argument.</p>
+<li><p class="first"><tt class="literal"><span class="pre">QueueChan&lt;class</span> <span class="pre">Data&gt;</span></tt>: This is a typed queued channel: It allows for
+multiple producers and requires a single consumer.  By default, the queue
+size is not fixed, but the user may set a maximum size by specifying it as
+the constructor argument.</p>
 </li>
 <li><p class="first"><tt class="literal"><span class="pre">Timeout</span></tt>:  Use this to break out of an alt block after a specified amount
 of simulation time.  It uses <tt class="literal"><span class="pre">pDelay()</span></tt> to block for a given amount of
@@ -563,7 +564,7 @@ the collector will collect it when it is safe to do so.</p>
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="user-guide.rst">View document source</a>.
-Generated on: 2004/06/30 10:07:02 CDT.
+Generated on: 2004/07/02 18:19:35 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
